# ExamplePythonPackage

./: .gitignore  Readme.md  pyproject.toml
src/ExamplePythonPackage/DataCleaning/: clean_name.py
src/ExamplePythonPackage/DataCleaning/tests/: test_clean_name.py
src/ExamplePythonPackage/Hello/: hello_user.py
